# AI-Hackathon-2026

./: .env.example  .env.production.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_v2.md  GEMINI.md  PROJECT_MANAGEMENT.md  PROJECT_MANAGER.ms  README.md  THANH-NOW.md  USER1-NOW.md  USER2-NOW.md  WORKFLOW-MVP(4).md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
app/dmx-crawler/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/dmx-crawler/config/: categories.yaml  locations.yaml
app/dmx-crawler/dmx_crawler/: __init__.py  batch_policy.py  cli.py  config.py  crawler.py  db.py  discovery.py  dual_write.py  html.py  http.py  models.py  parsers.py  sqlite_schema.sql  utils.py
app/dmx-crawler/dmx_crawler/adapters/: dmx.py
app/dmx-crawler/docs/: catalog-schema.md  live-smoke.md  site-reconnaissance.md
app/dmx-crawler/docs/handoff/: current-status.md  implementation-history.md  transfer-manifest.md  validation-report.md
app/dmx-crawler/migrations/: 001_initial.sql  002_rich_product_spec_values.sql  003_split_catalog_crawler_schemas.sql
app/dmx-crawler/scripts/: create_sample.py
app/dmx-crawler/sql/: compare_prices.sql
app/dmx-crawler/tests/: test_adapter.py  test_batch_policy.py  test_crawler_attempts.py  test_database.py  test_discovery.py  test_dual_write.py  test_dual_write_postgres.py  test_http.py  test_parsers.py  test_postgres_schema_split.py  test_spec_persistence.py  test_specifications.py  test_utils.py
app/dmx-crawler/tests/fixtures/: category_laptop.html  delivery_hcm.json  (+5 more)
(+609 files in other folders)
